CHANGES

------------------------------------------------------------
CVS HEAD
------------------------------------------------------------

1999-12-18 warp:
 Feature:
  * Added new builtin 'builtin'
 Internal:
  * Changed prompt evaluation to be more bash compatible and
    to handle even complex prompts
  * Fixed generation of weekday names

1999-12-17 gwhitney:
 Internal:
  * Stab-in-the-dark attempt at a workaround for Schinder's failed
test on HPUX.
  * Documentation updates
  * quoted all non-trivial results of successful glob_expansion; the
idea is that if a glob pattern hits, the user probably doesn't want
any further expansion to occur, in particular Perl evaluation.
 Features:
  * %Psh::perl_builtins configuration variable now controls whether a
word should be considered a "perl function", as part of my ongoing
effort to tame this evaluation strategy. I'm not suggesting we put it
back in as a default strategy, but at least now if you use it, you can
tell it not to trigger on "grep" or "chmod" or whatever you like.

1999-12-16 warp: 
 Internal:
  * Used Pod::Text to generate the output of "help" builtin. Looks
much nicer now!
  * Support for TAB completions for builtins
  * Small fixes for setenv, print_list and abs_path

1999-12-15 gwhitney:
 Internal:
  * Fixed warnings generated by "make test", except for the "subroutine 
abs_path redefined" warning that I can't figure out how to avoid.
  * Avoided clobbering the SHELL environment variable, which other
shells leave alone; instead set CURRENT_SHELL to the path to psh.
  * Fixed output of alias to escape single quotes on RHS.
  * Documentation updates.

 Features:
  * Added brace evaluation strategy forcing Perl evaluation, and made
it a default strategy, to ensure standard pshrc does what is intended, 
and to be parallel with bang and comment.
  * added $Psh::prompt_cont variable for prompts on continuation
lines.
  * added $Psh::result_array variable to control where results of Perl 